appId: com.attenex.attenex
---
- launchApp
# Login Flow
- tapOn: "name@example.com"
- inputText: "student@test.com"
- tapOn: "Enter your password"
- inputText: "password"
- tapOn: "Sign In"
# Assert Student Dashboard
- assertVisible: "Student Dashboard"
# Join Flow
# - tapOn: "Join Class Now"
# - assertVisible: "Joined!"
