appId: com.attenex.attenex
---
- launchApp
# Login Flow
- tapOn: "name@example.com"
- inputText: "teacher@test.com"
- tapOn: "Enter your password"
- inputText: "password"
- tapOn: "Sign In"
# Assert Teacher Dashboard
- assertVisible: "Create New Lecture"
# Create Lecture Flow
- tapOn: "e.g., Introduction to React Native"
- inputText: "Maestro Test Lecture"
- tapOn: "e.g., Computer Science 101"
- inputText: "Test Class"
- tapOn: "Create Lecture"
- assertVisible: "Success"
